Input Information setup page

--- a/src/styles/Setup.module.scss
+++ b/src/styles/Setup.module.scss
@@ -16,6 +16,9 @@
 
 .contentInformation {
     color: white;
+    border-style: dashed;
+    border-radius: 10px;
+    padding: 10px;
 }
 
 .contenButton {
