--- a/src/styles/Setup.module.scss
+++ b/src/styles/Setup.module.scss
@@ -8,6 +8,12 @@
 
 }
 
+.contentMain {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    margin-top: 50px;
+}
+
 .contentInput{
     place-items:center;
     // width: 100%;
@@ -19,6 +25,7 @@
     border-style: dashed;
     border-radius: 10px;
     padding: 10px;
+    margin-right: 25px;
 }
 
 .contenButton {
