--- a/src/Components/InputField/InputField.scss
+++ b/src/Components/InputField/InputField.scss
@@ -9,6 +9,12 @@
     background-color: #424242;
     padding: 15px;
     border-radius: 10px;
+    color: white;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 10px;
+    margin-right: 25px;
+    box-shadow: 1px 1px 5px white;
   }
 
 input {
