--- a/src/styles/Setup.module.scss
+++ b/src/styles/Setup.module.scss
@@ -10,8 +10,9 @@
 
 .contentMain {
     display: grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 2fr 1fr;
     margin-top: 50px;
+    align-items: center;
 }
 
 .contentInput{
@@ -20,18 +21,12 @@
     color: white
 }
 
-.contentInformation {
-    color: white;
-    border-style: dashed;
-    border-radius: 10px;
-    padding: 10px;
-    margin-right: 25px;
-}
 
-.contenButton {
-    display: grid;
-    grid-template-columns: auto auto;
-    align-content:space-around ;
+.contentButton {
+    display: flex;
+    justify-content: center;
+    margin: 10px;
+    gap: 20px;
     
 }
 
