--- a/src/App.scss
+++ b/src/App.scss
@@ -13,31 +13,36 @@
 }
 
 Header {
+  position: sticky;
   width: 100%;
   background-color: #424242;
   color: white;
   text-align: center;
-  padding: 15px 0;
+  max-height: 100px;
+  padding: px 0;
 }
 
 .content {
-  color: white;
+  color: rgb(255, 255, 255);
   height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 200px;
-  margin: 200px;
+  // padding: 20px;
+  // margin: 20px;
   flex-grow: 1; // Ser till att content tar all tillgänglig höjd
 }
 
 footer {
+  position: sticky;
+  bottom: 0;
   width: 100%;
   background-color: #424242;
   color: white;
   text-align: center;
   padding: 10px 0;
-  
+  z-index: 10;
+  max-height: 50px;
 }
