--- a/src/App.scss
+++ b/src/App.scss
@@ -26,6 +26,7 @@ Header {
   color: rgb(255, 255, 255);
   height: 100%;
   width: 100%;
+  max-width: calc(100vw - 5px);
   display: flex;
   flex-direction: column;
   align-items: center;
