--- a/src/Components/Button/Button.scss
+++ b/src/Components/Button/Button.scss
@@ -1,20 +1,25 @@
 .btn {
     background-color: rgb(59, 59, 59);
-    width: 150px;
-    height: 50px;
-    border-radius: 25px;
+    width: 75px;
+    height: 75px;
+    border-radius: 100px;
     border-width: 2px;
     border-style: solid;
     color: white;
     box-shadow: 0px 0px 5px 0px;
     transition: box-shadow 0.15s 0.15s, border-color 0.15s 0.15s;
     font-style: bold;
-    font-size: 16px;
-
+    font-size: 36px;
+    text-align: center;
+    padding-bottom: 2px;
 }
 
 .btn:hover {
+    width: 100px;
+    height: 100px;
     box-shadow: 0px 0px 15px 0px aqua;
     border-color: aqua;
+    color: rgba(0, 255, 255, 0.75);
     cursor: pointer;
 }
+
