--- a/src/Components/Button/Button.scss
+++ b/src/Components/Button/Button.scss
@@ -23,3 +23,9 @@
     cursor: pointer;
 }
 
+.btn:active {
+    box-shadow: 0px 0px 5px 0px;
+    border-color: rgb(59, 59, 59);
+    color: white;
+    cursor: default;
+}
